notification mail template changed
template now have link to backend message {{url_message}}

--- a/views/mail/notification.htm
+++ b/views/mail/notification.htm
@@ -1,5 +1,9 @@
 subject = "Contact Us Form Message Received"
 ==
-You received a message from {{name}}
+You received a message from {{name}}.
+To read message go to {{url_message}}
 ==
 <strong>You received a message from {{name}} </strong>
+<p>
+    Click <a href="{{url_message}}">here</a> to read the message.
+</p>
