--- a/components/simplecontact/flashMessage.htm
+++ b/components/simplecontact/flashMessage.htm
@@ -8,6 +8,14 @@
 {% flash error %}
 <div class="alert alert-danger alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+{% if(__SELF__.properties.detailedErrors == 1) %}
+    <ul>
+    {% for error in errors %}
+        <li>{{ error }}</li>
+    {% endfor %}
+    </ul>
+{% else %}
     {{ message }}
+{% endif %}
 </div>
 {% endflash %}
