--- a/components/simplecontact/default.htm
+++ b/components/simplecontact/default.htm
@@ -1,6 +1,6 @@
 {{ __SELF__.settings.text_top_form|raw}}
 
-<form id="simpleContactForm">
+<form id="simpleContactForm" data-request="{{ __SELF__ }}::onFormSubmit">
 
     <div id="simple_contact_flash_message"></div>
 
@@ -18,18 +18,18 @@
     {% if(__SELF__.properties.phoneEnabled) %}
         <div class="form-group">
             <label for="phone">{{__SELF__.properties.phoneLabel}}</label>
-            <input type="text" id="phone" name="phone" class="form-control"  >
+            <input type="text" id="phone" name="phone" class="form-control" required>
         </div>
     {% endif %}
 
     <div class="form-group">
         <label for="subject">{{__SELF__.properties.subjectLabel}}</label>
-        <input type="text" id="subject" name="subject" class="form-control"  >
+        <input type="text" id="subject" name="subject" class="form-control" required>
     </div>
 
     <div class="form-group">
         <label for="message">{{__SELF__.properties.messageLabel}}</label>
-        <textarea id="message" name="message" class="form-control"></textarea>
+        <textarea id="message" name="message" class="form-control" required></textarea>
     </div>
 
     <!-- Injecting reCaptcha if enabled -->
@@ -42,7 +42,6 @@
     <!-- End reCaptcha -->
 
     <button id="simpleContactSubmitButton"
-            data-request="{{ __SELF__ }}::onFormSubmit"
             type="submit" class="btn btn-default">
         {{__SELF__.properties.buttonText}}
     </button>
